--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,11 @@ on:
 
 jobs:
   my_test:
-    runs-on: ubuntu-latest
-
+    runs-on: ${{matrix.os}}
+    strategy: 
+      matrix: 
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+   
     steps:
       - uses: actions/checkout@v1
 
